 NEW    : Russian, Turkish, Czech and Spanish translations
 NEW    : Internal AVI splitter support AMV files (need an ffdshow update to decode)
 CHANGED: Filetype association. MPC is now recognized as a registered media player application. Filetype registration now compatible with UAC. (Vista)
 CHANGED: Matroska internal subtitles are not loaded if "auto-load subtitles" option is off
 FIXED  : Subtitle popup menu not working in French
 FIXED  : Remember file position option not working properly in playlist mode
 FIXED  : Crash when opening "Navigation" menu while playing dvd (German locale only)
 FIXED  : Memory leak with window resize
 FIXED  : Many GUI related things
 FIXED  : Crash when opening zero byte length MP3 files

v1.0.10.0 - 15.Sep 2007
======================
 CHANGED: Latest Clsid Patches (Bento4 0.9.3, faad2 2.6b, dtsdec 0.0.2, libmad 0.15.1b, zlib 1.2.3, mpeg decoder: progressive frames fix, mpeg decoder: dsutil interlaced fix v2)
 CHANGED: libpng 1.2.20
 NEW    : Command Line Option "/d3dfs" to start MPC in D3D fullscreen mode
 NEW    : Logitech LCD support (e.g., G15 keyboard)
 CHANGED: Remember File and DVD position works only when "Keep history" is active (preserve privacy issue)
 CHANGED: Kick off Screen Saver from Power Options only while video is playing (Vista)
 NEW    : Build for x64 platforms
 NEW    : Multilingual support for english, french and german.
 CHANGED: DirectX SDK updated to August 2007 (v35)
 FIXED  : Wrong Aspect Ratio with EVR-Custom (definitely i hope :-)
 FIXED  : Internal Mpeg2 Decoder was not working with EVR and EVR-Custom
 FIXED  : Audio async problems with Blu-Ray/HD DVD DTS files [wrong AvgTimePerFrame calculation for DTS and AC3 (madshi)]
 FIXED  : OSD was not working when D3DX9_... dll was not present (random pixels shown in top of video)
 FIXED  : Mouse now working in DVD menu with EVR-Custom (Vista)
 FIXED  : FLV Splitter when video does not start with keyframe